{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 102,
  "lineage": "d7ea95bf-b7e0-f649-ed96-7accaef239c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4596ce1e7ae3e68",
            "arn": "arn:aws:ec2:ca-central-1:337617959565:instance/i-08e0d577d0611a078",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "veer-ebs"
                },
                "tags_all": {
                  "Name": "veer-ebs"
                },
                "throughput": 0,
                "volume_id": "vol-068454d3fadfbb64c",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e0d577d0611a078",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ca-central-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01026e2012d3a6e48",
            "private_dns": "ip-10-0-1-60.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.60",
            "public_ip": "15.222.248.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-027dab23e2a7da309",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce05160a732932e4",
            "tags": {
              "Name": "my-ec2-instance",
              "appid": "terraform",
              "env": "dev"
            },
            "tags_all": {
              "Name": "my-ec2-instance",
              "appid": "terraform",
              "env": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094bea66497f6b386"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:337617959565:internet-gateway/igw-019dc47d59ca41cc1",
            "id": "igw-019dc47d59ca41cc1",
            "owner_id": "337617959565",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0dedf83c3cfe7baad"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "veer-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "veer-bucket-10111",
                "enabled": true,
                "prefix": "veer-alb"
              }
            ],
            "client_keep_alive": 3600,
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:337617959565:loadbalancer/app/veer-alb-tf/16ff34b126781864",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "veer-alb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-094bea66497f6b386"
            ],
            "subnets": [
              "subnet-0ce05160a732932e4",
              "subnet-0db87928fc8686a0e"
            ],
            "tags": {
              "Environment": "development"
            },
            "tags_all": {
              "Environment": "development"
            },
            "xff_header_processing_mode": "append"
          },
          "dependencies": [
            "aws_s3_bucket.terraform-bucket",
            "aws_security_group.terraform-sg",
            "aws_subnet.terraform-subnet",
            "aws_subnet.terraform-subnet-1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "veer-network-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:337617959565:loadbalancer/net/veer-lb-tf/3d8c1d0906c8aa83",
            "arn_suffix": "net/veer-lb-tf/3d8c1d0906c8aa83",
            "dns_name": "veer-lb-tf-3d8c1d0906c8aa83.elb.ca-central-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:337617959565:loadbalancer/net/veer-lb-tf/3d8c1d0906c8aa83",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "veer-lb-tf",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ce05160a732932e4"
              },
              {
                "subnet_id": "subnet-0db87928fc8686a0e"
              }
            ],
            "subnets": [
              "subnet-0ce05160a732932e4",
              "subnet-0db87928fc8686a0e"
            ],
            "tags": {
              "Environment": "development"
            },
            "tags_all": {
              "Environment": "development"
            },
            "vpc_id": "vpc-0dedf83c3cfe7baad",
            "zone_id": "Z2EPGBW3API2WT"
          },
          "dependencies": [
            "aws_subnet.terraform-subnet",
            "aws_subnet.terraform-subnet-1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:337617959565:route-table/rtb-0af943da4f21f49d3",
            "id": "rtb-0af943da4f21f49d3",
            "owner_id": "337617959565",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-019dc47d59ca41cc1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-pub-rt"
            },
            "tags_all": {
              "Name": "my-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dedf83c3cfe7baad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5184302fb0e68ca",
            "route_table_id": "rtb-0af943da4f21f49d3",
            "subnet_id": "subnet-0ce05160a732932e4"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.terraform-pub-rt",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-subnet-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027a63e394e23c17b",
            "route_table_id": "rtb-0af943da4f21f49d3",
            "subnet_id": "subnet-0db87928fc8686a0e"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.terraform-pub-rt",
            "aws_subnet.terraform-subnet-1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:337617959565:security-group/sg-094bea66497f6b386",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094bea66497f6b386",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_sg",
            "name_prefix": "",
            "owner_id": "337617959565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg-traffic"
            },
            "tags_all": {
              "Name": "my-sg-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dedf83c3cfe7baad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:337617959565:subnet/subnet-0ce05160a732932e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce05160a732932e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337617959565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-public-subnet-1a"
            },
            "tags_all": {
              "Name": "My-public-subnet-1a"
            },
            "vpc_id": "vpc-0dedf83c3cfe7baad"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:337617959565:subnet/subnet-0db87928fc8686a0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db87928fc8686a0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337617959565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-public-subnet-1b"
            },
            "tags_all": {
              "Name": "My-public-subnet-1b"
            },
            "vpc_id": "vpc-0dedf83c3cfe7baad"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:337617959565:vpc/vpc-0dedf83c3cfe7baad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00db364aab9f62d2b",
            "default_route_table_id": "rtb-01ba99db4bbc89485",
            "default_security_group_id": "sg-01629e04d77b7e76b",
            "dhcp_options_id": "dopt-0cf201a6ce2b94358",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dedf83c3cfe7baad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ba99db4bbc89485",
            "owner_id": "337617959565",
            "tags": {
              "Name": "MY_VPC"
            },
            "tags_all": {
              "Name": "MY_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:337617959565:security-group-rule/sgr-01b29b818c30954c2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01b29b818c30954c2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-094bea66497f6b386",
            "security_group_rule_id": "sgr-01b29b818c30954c2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:337617959565:security-group-rule/sgr-0f7338cdda9200885",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0f7338cdda9200885",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-094bea66497f6b386",
            "security_group_rule_id": "sgr-0f7338cdda9200885",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "terraform-ingress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:337617959565:security-group-rule/sgr-01484cefd0e6d08a7",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01484cefd0e6d08a7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-094bea66497f6b386",
            "security_group_rule_id": "sgr-01484cefd0e6d08a7",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "terraform-ingress-rule-all-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:337617959565:security-group-rule/sgr-0903391d7a54cf079",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0903391d7a54cf079",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-094bea66497f6b386",
            "security_group_rule_id": "sgr-0903391d7a54cf079",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    }
  ]
}